--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "00fc7c47-33f2-4313-b28a-f9ebbcdabe4b"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
